getId が非推奨なので, threadId を使う